tests/reference/asr-kind_string_of_int-ed0ec70.stderr
semantic error: Only Integer literals or expressions which reduce to constant Integer are accepted as kind parameters.
 --> tests/errors/kind_string_of_int.f90:3:13
  |
3 |     integer('a') :: x
  |             ^^^ 
